--- a/src/content/docs/overview.mdx
+++ b/src/content/docs/overview.mdx
@@ -1,4 +1,4 @@
-# Tổng quan chương 1 — Hust Media
+# Tổng quan — Hust Media
 
 Tài liệu này tóm lược nội dung Chương 1 (Khảo sát, Phân tích và Hướng đi vào chi tiết) của đồ án Hust Media. Nội dung tập trung vào bối cảnh, đối tượng người dùng, cơ chế vận hành và yêu cầu phi chức năng.
 
