--- a/src/content/docs/overview.mdx
+++ b/src/content/docs/overview.mdx
@@ -1,7 +1,7 @@
-# Hust Media Tech Lab
+# Hust Media System Overview
 
 ## Introduction & Core Concepts
-Hust Media Tech Lab is a **Distributed Data Middleware** designed to standardize automated workflows and validate data quality through a **Compute Credits** mechanism. The system operates on a high-performance **Client-Server** model, distinctly separating the **API Gateway**, **Core Services**, **Data Pipeline**, and **Verification Engine** to maintain stable **Real-time Latency** for large-scale processing.
+Hust Media System Overview is a **Distributed Data Middleware** designed to standardize automated workflows and validate data quality through a **Compute Credits** mechanism. The system operates on a high-performance **Client-Server** model, distinctly separating the **API Gateway**, **Core Services**, **Data Pipeline**, and **Verification Engine** to maintain stable **Real-time Latency** for large-scale processing.
 
 Core flow:
 - **Data Ingestion → Execution → Validation → Credit Allocation → Resource Balancing**
